--- a/src/country.css
+++ b/src/country.css
@@ -1,6 +1,6 @@
 #root {
     background: #eee;
-    height: 110vh;
+    min-height: 100vh;
 }
 
 .country-wrapper {
@@ -86,6 +86,7 @@ h2 {
     justify-content: space-around;
     flex-direction: row;
     flex-wrap: wrap;
+    min-height: 100vh;
 }
 
 .single-country {
