--- a/src/country.css
+++ b/src/country.css
@@ -18,6 +18,7 @@ header {
     background: #003e9f;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    margin: 0 auto;
 }
 
 .country-photo {
